@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command { any[]() } } */
+/* { dg-output {\[\]} } */
