@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command { any[3](666) } } */
+/* { dg-output {\[666,666,666\]} } */
