@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+
+any[3#B] (); /* { dg-error ".*\n.*not supported" } */
